Allow images to be uploaded locally when in dev mode

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "connect-flash": "0.1.1",
     "connect-ensure-login": "0.1.1",
     "mongoose": "3.6.19",
-    "aws-sdk": "1.5.2"
+    "aws-sdk": "1.5.2",
+    "node-uuid": "1.4.1",
+    "mkdirp": "0.3.5"
   }
 }
