--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "3.6.19",
     "aws-sdk": "1.5.2",
     "node-uuid": "1.4.1",
-    "mkdirp": "0.3.5"
+    "mkdirp": "0.3.5",
+    "mime": "1.2.11"
   }
 }
